--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,20 +16,14 @@
 
 
     <ImageView
-        android:layout_margin="16dp"
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        android:layout_above="@+id/button"
-        android:scaleType="fitCenter" />
+        android:layout_margin="32dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="NEXT ACTIVITY"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
