--- a/permissionhelper/src/main/res/values/library_marshmallowpermissionmanager_strings.xml
+++ b/permissionhelper/src/main/res/values/library_marshmallowpermissionmanager_strings.xml
@@ -4,10 +4,10 @@
 	<string name="define_marshmallowpermissionmanager"></string>
 	<string name="library_marshmallowpermissionmanager_author">Rurio Luca</string>
 	<string name="library_marshmallowpermissionmanager_authorWebsite">https://github.com/RurioLuca/MarshmallowPermissionManager</string>
-	<string name="library_marshmallowpermissionmanager_libraryName">MarshmallowPermissionManager</string>
+	<string name="library_marshmallowpermissionmanager_libraryName">PermissionHelper</string>
 	<string name="library_marshmallowpermissionmanager_libraryDescription">Helper to ask runtime permission on android marshmallow</string>
 	<string name="library_marshmallowpermissionmanager_libraryWebsite">https://github.com/RurioLuca/MarshmallowPermissionManager</string>
-	<string name="library_marshmallowpermissionmanager_libraryVersion">1.1.4</string>
+	<string name="library_marshmallowpermissionmanager_libraryVersion">1.1.5</string>
 	<string name="library_marshmallowpermissionmanager_isOpenSource">true</string>
 	<string name="library_marshmallowpermissionmanager_repositoryLink">https://github.com/RurioLuca/MarshmallowPermissionManager</string>
 	<string name="library_marshmallowpermissionmanager_classPath">permission.auron.com.marshmallowpermissionhelper</string>
