create Custom annotation

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,12 +16,11 @@
         android:title="@string/askMultiPermission"
         app:showAsAction="never" />
 
-    <!--<item
-        android:id="@+id/ask_single_fragment"
-        android:orderInCategory="103"
-        android:title="@string/askSingleFragment"
-        app:showAsAction="never" />
--->
+ <item
+          android:id="@+id/ask_annotation"
+          android:orderInCategory="103"
+          android:title="@string/askAnnotation"
+          app:showAsAction="never" />
 
     <item
         android:id="@+id/check_permission"
